--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tugas-akhir-pemweb",
+  "name": "pelatihan-itc-be-todo",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
