--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 HOST="localhost"
-USER="root"
+USERNAME="root"
 PASSWORD=""
-DATABASE="pelatihan-todolist"
+DATABASE="pelatihan-itc"
 PORT="3002"
+TOKEN_SECRET_KEY=657aed4fdffda4dfd3958eba6f38fff8
