--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ USERNAME="root"
 PASSWORD=""
 DATABASE="pelatihan-itc"
 PORT="3002"
+
+# Belum kepake
 TOKEN_SECRET_KEY=657aed4fdffda4dfd3958eba6f38fff8
